--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,16 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
+    <load src="./partials/header.html"/>
+    <load src="./partials/hero.html"/>
     <main>
-      <!-- Loads the specified .html file -->
+      <!--icon-path="img/sprite.svg#logo"-->
+       <load src="./partials/naturalness.html"/>
+       <load src="./partials/advantages.html"/>
+       <load src="./partials/assortment.html"/>
+       <load src="./partials/pictures.html"/>
+       <load src="./partials/reviews.html"/>
+       <load src="./partials/feedback.html"/>
     </main>
 
     <load src="./partials/footer.html" />
