--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,12 @@
     <main>
       <!--icon-path="img/sprite.svg#logo"-->
       <load src="./partials/hero.html"/>
-       <load src="./partials/naturalness.html"/>
+       <load src="./partials/about.html"/>
        <load src="./partials/advantages.html"/>
        <load src="./partials/assortment.html"/>
-       <load src="./partials/pictures.html"/>
-       <load src="./partials/reviews.html"/>
-       <load src="./partials/feedback.html"/>
+       <load src="./partials/gallery.html"/>
+       <load src="./partials/feedbacks.html"/>
+       <load src="./partials/support.html"/>
     </main>
 
     <load src="./partials/footer.html" />
