--- a/src/index.html
+++ b/src/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <load src="./partials/header.html"/>
-    <main>
-      <!--icon-path="img/sprite.svg#logo"-->
-      <load src="./partials/hero.html"/>
-       <load src="./partials/about.html"/>
-       <load src="./partials/advantages.html"/>
-       <load src="./partials/assortment.html"/>
-       <load src="./partials/gallery.html"/>
-       <load src="./partials/feedbacks.html"/>
-       <load src="./partials/support.html"/>
-    </main>
 
-    <load src="./partials/footer.html" />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title></title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
 
-    <script type="module" src="./main.js"></script>
-  </body>
+<body>
+  <load src="./partials/header.html" />
+  <main>
+    <!--icon-path="img/sprite.svg#logo"-->
+    <load src="./partials/hero.html" />
+    <load src="./partials/about.html" />
+    <load src="./partials/advantages.html" />
+    <load src="./partials/assortment.html" />
+    <load src="./partials/gallery.html" />
+    <load src="./partials/feedbacks.html" />
+    <load src="./partials/support.html" />
+  </main>
+
+  <load src="./partials/footer.html" />
+
+  <script type="module" src="./main.js"></script>
+</body>
+
 </html>
