--- a/src/index.html
+++ b/src/index.html
@@ -5,23 +5,29 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html"/>
+    <load src="./partials/header.html" />
     <main>
       <!--icon-path="img/sprite.svg#logo"-->
-      <load src="./partials/hero.html"/>
-       <load src="./partials/naturalness.html"/>
-       <load src="./partials/advantages.html"/>
-       <load src="./partials/assortment.html"/>
-       <load src="./partials/pictures.html"/>
-       <load src="./partials/reviews.html"/>
-       <load src="./partials/feedback.html"/>
+      <load src="./partials/hero.html" />
+      <load src="./partials/naturalness.html" />
+      <load src="./partials/advantages.html" />
+      <load src="./partials/assortment.html" />
+      <load src="./partials/gallery.html" />
+      <load src="./partials/reviews.html" />
+      <load src="./partials/feedback.html" />
     </main>
 
     <load src="./partials/footer.html" />
