--- a/src/index.html
+++ b/src/index.html
@@ -26,5 +26,6 @@
       <load src="./partials/gallery.html" />
       <load src="./partials/feedbacks.html" />
       <load src="./partials/support.html" />
+      <load src="./partials/footer.html" />
     </main>
 </html>
