update nav names

--- a/src/index.html
+++ b/src/index.html
@@ -28,4 +28,5 @@
       <load src="./partials/support.html" />
       <load src="./partials/footer.html" />
     </main>
+    <script src="/main.js"></script>
 </html>
